Fix blurry logo in chrome

--- a/src/main.css
+++ b/src/main.css
@@ -34,11 +34,11 @@
 	top: 1.5em; left: 1.5em;
 	z-index: 1;
 	transition: filter 0.5s ease, -webkit-filter 0.5s ease, transform 0.8s ease;
-	will-change: transform;
+	transform: translateZ(0);
 }
 
 .logo-main.sitemap {
-	transform: translateX(calc(50vw - 50% - 1.5em)) translateY(calc(15vh - 50% - 1.5em)) scale(1.7);
+	transform: translateX(calc(50vw - 50% - 1.5em)) translateY(calc(15vh - 50% - 1.5em)) scale(1.76) translateZ(0);
 }
 
 .logo-main img {
